fixed text alignments and fonts

--- a/CSS/menu1.css
+++ b/CSS/menu1.css
@@ -36,5 +36,7 @@
   }
 body{
     background-color: rgb(150, 175, 245);
-
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    text-align: center;
+    font-size: 18px;
 }
